crates/ruff/src/rules/flake8_variables_names/snapshots/ruff__rules__flake8_variables_names__tests__enforce_strict_variable_single_letter.snap
---
source: crates/ruff/src/rules/flake8_variables_names/mod.rs
expression: diagnostics
---
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `x`"
    suggestion: ~
    fixable: false
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 1
  fix: ~
  parent: ~
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `y`"
    suggestion: ~
    fixable: false
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 1
  fix: ~
  parent: ~
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `z`"
    suggestion: ~
    fixable: false
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 1
  fix: ~
  parent: ~
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `i`"
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 1
  fix: ~
  parent: ~
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `a`"
    suggestion: ~
    fixable: false
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 5
  fix: ~
  parent: ~
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `t`"
    suggestion: ~
    fixable: false
  location:
    row: 17
    column: 10
  end_location:
    row: 17
    column: 11
  fix: ~
  parent: ~
- kind:
    name: SingleLetterVariableName
    body: "Single letter variable name: `e`"
    suggestion: ~
    fixable: false
  location:
    row: 23
    column: 20
  end_location:
    row: 23
    column: 21
  fix: ~
  parent: ~

